--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -62,7 +62,7 @@
     padding: 12px;
     border-radius: 6px;
     color: rgb(74, 74, 74);
-    // display: none;
+    display: none;
   
     &-list {
       margin-top: 16px;
